--- a/codeception.yml
+++ b/codeception.yml
@@ -4,7 +4,11 @@ paths:
     data: tests/_data
     support: tests/_support
     envs: tests/_envs
+
 actor_suffix: Tester
-extensions:
-    enabled:
-        - Codeception\Extension\RunFailed
+
+coverage:
+    enabled: true
+    whitelist:
+        include:
+          - src/*
