Fix coverall configuration

--- a/.coveralls.yml
+++ b/.coveralls.yml
@@ -1,2 +1,4 @@
 service_name: travis-pro
 repo_token: wcc5kpxEaRHoo2ypdFaSO7iTDk1ziHLDu
+coverage_clover: tests/_output/coverage.xml
+json_path: tests/_output/coveralls-upload.json
