--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,11 @@
     "php": ">=7.0",
     "codeception/codeception": ">=2.4 | <3.0",
     "clue/graph": "^0.9",
-    "graphp/algorithms": "^0.8"
+    "graphp/algorithms": "^0.8",
+    "edno/graphyed": "*"
   },
   "require-dev": {
-    "php-coveralls/php-coveralls": "^2.1",
-    "edno/graphyed": "*"
+    "php-coveralls/php-coveralls": "^2.1"
   },
   "autoload": {
     "psr-4": {
