--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_script:
   - composer install --prefer-source --no-interaction
 
 script:
-  - php ./vendor/bin/codecept run unit --coverage-xml
+  - php ./vendor/bin/codecept run unit,acceptance --coverage-xml
 
 after_success:
 - travis_retry php ./vendor/bin/php-coveralls
