--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -7,6 +7,4 @@
 actor: AcceptanceTester
 modules:
     enabled:
-        - PhpBrowser:
-            url: http://localhost/myapp
-        - \Helper\Acceptance
+        - Cli
