--- a/composer.json
+++ b/composer.json
@@ -14,16 +14,19 @@
     "php": ">=7.0",
     "codeception/codeception": ">=2.4 | <3.0",
     "clue/graph": "^0.9",
-    "graphp/algorithms": "^0.8",
     "edno/graphyed": "*"
   },
   "require-dev": {
+    "graphp/algorithms": "^0.8",
     "php-coveralls/php-coveralls": "^2.1"
   },
   "autoload": {
     "psr-4": {
 	     "edno\\Codeception\\": "src/"
     }
+  },
+  "suggest": {
+    "graphp/algorithms": "Compatible set of graph algorithms for Graphwalker"
   },
   "minimum-stability": "dev",
   "prefer-stable": true
