--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
       }
   ],
   "require": {
-    "php": ">=7.0",
-    "codeception/codeception": ">=2.4.3 | <3.0",
+    "php": ">=7.1",
+    "codeception/codeception": "^3",
     "clue/graph": "^0.9",
     "edno/graphyed": "*"
   },
