--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
   "require-dev": {
     "graphp/algorithms": "^0.8",
     "php-coveralls/php-coveralls": "^2",
-    "codeception/module-asserts": "^1"
+    "codeception/module-asserts": "^1",
+    "codeception/module-cli": "^1.0"
   },
   "autoload": {
     "psr-4": {
